clusters/home/apps/mediabox/prowlarr/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: mediabox
  annotations:
    external-dns.kubernetes.io/hostname: "prowlarr.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-external.layertwo.dev"
    layertwo.dev/publish: "all"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`prowlarr.layertwo.dev`) && PathPrefix(`/ping`)
    kind: Rule
    services: &services
    - name: prowlarr
      port: 9696
    middlewares:
      - name: default-headers-mediabox
  - match: Host(`prowlarr.layertwo.dev`)
    kind: Rule
    services: *services
    middlewares:
      - name: default-headers-mediabox
      - name: mediabox-oidc
